Delete of file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/L.-----------.htm

--- a/Content/02_Safety & Compliance/f.Support Info.htm
+++ b/Content/02_Safety & Compliance/f.Support Info.htm
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="4" MadCap:lastHeight="805" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="4" MadCap:lastHeight="818" MadCap:lastWidth="624">
     <head>
     </head>
     <body>
+        <h1 class="AA_Chpt_Heading1" MadCap:conditions="Default.Print" MadCap:autonum="1. "> Support Information</h1>
         <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Technical Support</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Technical Support</h2>
         <p>Technical support details are shown on the support card that came with your system.</p>
