--- a/Content/02_Safety & Compliance/c.Safety-Compliance.htm
+++ b/Content/02_Safety & Compliance/c.Safety-Compliance.htm
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="1313" MadCap:lastWidth="1196">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="5" MadCap:lastHeight="821" MadCap:lastWidth="624">
     <head>
+        <link href="../Resources/Table Stylesheets/NoteBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Safety &amp; Compliance</h2>
-        <h2>Safety &amp; Compliance</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Safety &amp; Compliance</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Safety &amp; Compliance</h2>
         <p>To ensure correct and safe operation, you must follow all safety precautions and instructions referred to in this user guide and in the other documentation supplied with your Integris System.</p>
         <ul>
             <li>	Use the Proper Power Cord. Use only the power cord specified for use with this product and certified for the country of use.</li>
@@ -21,10 +22,10 @@
             <li>Do Not Operate with Covers or Panels Removed.</li>
             <li>Avoid Exposed Circuitry. Do not touch exposed connections and components when power is present.</li>
             <li>Do Not Operate with Suspected Failures. If you suspect  there is damage to this product, have it inspected by qualified service personnel before use.</li>
-            <li>Obey Safety Information. This user guide contains additional safety and operating instructions highlighted as follows:<ul><li><b>DANGER</b> 	Describes a condition that may lead to an injury hazard</li><li><b>WARNING</b> 	Describes a condition that may result in damage to equipment</li><li><b>CAUTION</b> 	Describes a requirement that must be met to avoid hazard to property.</li><li><b>IMPORTANT</b> 	Describes a condition that may lead to undesirable results.</li></ul></li>
+            <li>Obey Safety Information. </li>
         </ul>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.2. ">General Operating Guidelines</h2>
-        <h2>General Operating Guidelines</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.2. ">General Operating Guidelines</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">General Operating Guidelines</h2>
         <ul>
             <li>Do not expose your skin to the computer when operating it in a very hot or cold environment.</li>
             <li>Do not place heavy objects on top of the computer as this may damage the display.</li>
@@ -33,11 +34,11 @@
             <li>LCD image sticking occurs when a fixed pattern is displayed on the screen for a prolonged period of time. You can avoid the problem by limiting the amount of static content on the display. It is recommended that you use a screen saver or turn off the display when it is not in use.</li>
             <li>To maximize the life of the backlight in the display, allow the backlight to automatically turn off as a result of power management.</li>
         </ul>
-        <table style="border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;border-left-style: solid;border-left-width: 1px;border-left-color: ;border-right-style: solid;border-right-width: 1px;border-right-color: ;border-top-style: solid;border-top-width: 1px;border-top-color: ;border-bottom-style: solid;border-bottom-width: 1px;border-bottom-color: ;margin-left: auto;margin-right: auto;">
-            <col style="width: 100%;" />
+        <table style="border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;border-left-style: solid;border-left-width: 1px;border-left-color: ;border-right-style: solid;border-right-width: 1px;border-right-color: ;border-top-style: solid;border-top-width: 1px;border-top-color: ;border-bottom-style: solid;border-bottom-width: 1px;border-bottom-color: ;margin-left: auto;margin-right: auto;mc-table-style: url('../Resources/Table Stylesheets/NoteBoxStyle01.css');" class="TableStyle-NoteBoxStyle01" cellspacing="0">
+            <col style="width: 100%;" class="TableStyle-NoteBoxStyle01-Column-Column1" />
             <tbody>
-                <tr>
-                    <td class="NOTES_Cell"><b>NOTE</b>: Integris systems are supplied as a turnkey solution consisting of the portable chassis, Interface Cards, Software and Product Licenses so no access to the internal components of the platform is necessary.<![CDATA[                     ]]></td>
+                <tr class="TableStyle-NoteBoxStyle01-Body-Body1">
+                    <td class="TableStyle-NoteBoxStyle01-BodyA-Column1-Body1"><b>NOTE</b>: Integris systems are supplied as a turnkey solution consisting of the portable chassis, Interface Cards, Software and Product Licenses so no access to the internal components of the platform is necessary.                     </td>
                 </tr>
             </tbody>
         </table>
