Commit of file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/a1.UG_Legal.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/d.Document_Conventions.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/02_Safety & Compliance/b.Regulatory.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/02_Safety & Compliance/c.Safety-Compliance.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/02_Safety & Compliance/d.Environmental.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/02_Safety & Compliance/f.Support Info.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/02_Safety & Compliance/h.TechSup Warranty & Calibration.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/b.Connecting_2k.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/b3.Installation Tests.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/b4.Troubleshooting.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/f.Tests-SFP.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/b1.Integris_3000_Display.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/b2.QSG Exercise.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS G

--- a/Content/02_Safety & Compliance/b.Regulatory.htm
+++ b/Content/02_Safety & Compliance/b.Regulatory.htm
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="5" MadCap:lastHeight="782" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="5" MadCap:lastHeight="791" MadCap:lastWidth="624">
     <head>
         <link href="../Resources/Table Stylesheets/InfoBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
         <link href="../Resources/Table Stylesheets/CautionBoxStyle.css" rel="stylesheet" MadCap:stylesheetType="table" />
         <link href="../Resources/Table Stylesheets/NoteBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" /><title>Regulatory Information</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Regulatory Information</h2>
+        <h1 class="AA_Chpt_Heading1" MadCap:conditions="Default.Print" MadCap:autonum="1. ">Regulatory Information</h1>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Regulatory Information</h2>
         <p>This section provides regulatory statements and safety notices related to the system hardware. </p>
         <table style="border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;border-left-style: solid;border-left-width: 1px;border-left-color: ;border-right-style: solid;border-right-width: 1px;border-right-color: ;border-top-style: solid;border-top-width: 1px;border-top-color: ;border-bottom-style: solid;border-bottom-width: 1px;border-bottom-color: ;margin-left: auto;margin-right: auto;mc-table-style: url('../Resources/Table Stylesheets/NoteBoxStyle01.css');" class="TableStyle-NoteBoxStyle01" cellspacing="0">
@@ -41,7 +41,7 @@
         <p>Cet appareil numérique de Classe B respecte toutes les exigences du Règlement Canadien sur le matériel brouileur.</p>
         <p>This digital apparatus does not exceed the Class B limits for radio noise emissions from digital apparatus set out in the Radio Interference Regulations of the Canadian Department of Communications.</p>
         <p>Le présent appareil numérique n’émet pas de bruits radioélectriques dépassant les limites applicables aux appareils numériques de la classe B prescrites dans le Règlement sur le brouillage radioélectrique édicté par le ministère des Communications du Canada.</p>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.2. ">DVD Drive</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">DVD Drive</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">DVD Drive</h2>
         <p>Your computer comes with a Super Multi drive. The drive can read from and write to CD, DVD+, DVD- and DVD-RAM media.</p>
         <p>FDA regulations require the following statement for all laser-based devices:</p>
@@ -74,7 +74,7 @@
                 </tr>
             </tbody>
         </table>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.3. ">Safety Notices About the Battery</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.2. ">Safety Notices About the Battery</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Safety Notices About the Battery</h2>
         <p MadCap:conditions="">Keep the battery pack out of the reach of children.</p>
         <table style="border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;border-left-style: solid;border-left-width: 1px;border-left-color: ;border-right-style: solid;border-right-width: 1px;border-right-color: ;border-top-style: solid;border-top-width: 1px;border-top-color: ;border-bottom-style: solid;border-bottom-width: 1px;border-bottom-color: ;margin-left: auto;margin-right: auto;mc-table-style: url('../Resources/Table Stylesheets/CautionBoxStyle.css');" class="TableStyle-CautionBoxStyle" cellspacing="0">
@@ -94,7 +94,7 @@
                 </tr>
             </tbody>
         </table>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.4. ">Charging</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.3. ">Charging</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Charging</h2>
         <ul>
             <li>Use only the AC adapter supplied with your system. Use of another type of AC adapter will result in malfunction and/or danger.</li>
@@ -105,7 +105,7 @@
             <li>Do not attempt to service the unit. There are no serviceable parts inside. Replace the unit if it is damaged or exposed to excess moisture.</li>
         </ul>
         <p>&#160;</p>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.5. ">RF Device</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.4. ">RF Device</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">RF Device</h2>
         <p style="font-weight: bold;font-size: 12pt;">USA and Canada Safety Requirements and Notices</p>
         <table style="border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;border-left-style: solid;border-left-width: 1px;border-left-color: ;border-right-style: solid;border-right-width: 1px;border-right-color: ;border-top-style: solid;border-top-width: 1px;border-top-color: ;border-bottom-style: solid;border-bottom-width: 1px;border-bottom-color: ;margin-left: auto;margin-right: auto;mc-table-style: url('../Resources/Table Stylesheets/NoteBoxStyle01.css');" class="TableStyle-NoteBoxStyle01" cellspacing="0">
@@ -118,7 +118,7 @@
         </table>
         <p style="font-weight: bold;font-size: 12pt;">Radio Frequency Interference Requirements and SAR</p>
         <p>This device meets the government’s requirements for exposure to radio waves. This device is designed and manufactured not to exceed the emission limits for exposure to radio frequency (RF) energy set by the Federal Communications Commission of the U.S. Government. This device complies with FCC radiation exposure limits set forth for an uncontrolled environment.</p>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.6. ">EMC Requirements</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.5. ">EMC Requirements</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">EMC Requirements</h2>
         <p>This device uses, generates and radiates radio frequency energy. The radio frequency energy produced by this device is well below the maximum exposure allowed by the Federal Communications Commission (FCC).</p>
         <p>This device complies with the limits for a Class B digital device pursuant to Part 15 subpart C of the FCC Rules and Regulations. Operation is subject to the following two conditions:</p>
@@ -155,7 +155,7 @@
                 </tr>
             </tbody>
         </table>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.7. ">Energy Star</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.6. ">Energy Star</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Energy Star</h2>
         <p style="text-align: center;">
             <img src="../Resources/Images/2000/Energy_Star.png" MadCap:mediastyle="@media print { width: auto;height: 200px; }" />
