--- a/Content/20_2000/b4.Troubleshooting.htm
+++ b/Content/20_2000/b4.Troubleshooting.htm
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="8" MadCap:lastHeight="816" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="8" MadCap:lastHeight="776" MadCap:lastWidth="624">
     <head>
         <link href="../Resources/Table Stylesheets/NoteBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
         <link href="../../Resources/Table Stylesheets/Image&amp;LabelStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" /><title>Connecting Up</title>
@@ -15,7 +15,7 @@
             <tbody>
                 <tr>
                     <td style="text-align: center;">
-                        <img src="../Resources/Images/TB_RL to RRH-01.jpg" MadCap:mediastyle="@media print { height: auto;width: 350px; }" style="margin-top: 10px;margin-bottom: 10px;height: auto;width: 350px;" />
+                        <img src="../Resources/Images/2k_RRH_Monitoring-01.jpg" MadCap:mediastyle="@media print { height: auto;width: 350px; }" style="margin-top: 10px;margin-bottom: 10px;height: auto;width: 350px;" />
                     </td>
                 </tr>
                 <tr>
@@ -45,7 +45,7 @@
             </li>
             <li>
                 Repeat the <i>Integris Radio</i> test sequence by 
-            Openning the <i>TEST</i> menu and selecting <b>SELECT&#160;TEST</b>. Then click on the <b>RADIO</b>&#160;option. </li>
+            Opening the <i>TEST</i> menu and selecting <b>SELECT&#160;TEST</b>. Then click on the <b>RADIO</b>&#160;option. </li>
             <li>Now click on <b>RUN</b> from the same menu (or press the <b>F5</b> key),
                 
                   </li>
@@ -96,7 +96,7 @@
             <tbody>
                 <tr class="TableStyle-Image_&amp;_LabelStyle01-Body-Body1">
                     <td style="text-align: center;" class="TableStyle-Image_&amp;_LabelStyle01-BodyD-Column1-Body1">
-                        <img src="../Resources/Images/TB-loopback-2a.jpg" MadCap:mediastyle="@media print { height: auto;width: 400px; }" style="clear: both;vertical-align: text-top;mc-float: center;height: auto;width: 400px;" />
+                        <img src="../Resources/Images/Laptop loopback setup.jpg" MadCap:mediastyle="@media print { height: auto;width: 400px; }" style="clear: both;vertical-align: text-top;mc-float: center;height: auto;width: 400px;" />
                     </td>
                 </tr>
                 <tr class="TableStyle-Image_&amp;_LabelStyle01-Body-Body1">
@@ -125,7 +125,7 @@
             <li>Select the <b>TEST</b> menu, and click on <b>SELECT&#160;TEST</b>. Choose the <b>RRH</b> option.</li>
             <li>Click on the <b>MONITOR</b> menu option (Optionally press CTRL&#160;+&#160;M). If using Classic menus, the text under the MONITOR button changes to a green <b style="color: #228b22;">ON</b>.</li>
             <li>
-                <p>Click <b>RUN</b> (Optionally press <b>F5</b>.</p>
+                <p>Click <b>RUN</b> (Optionally press <b>F5</b>).</p>
                 <p>The word "<i>Monitoring</i>"&#160;will appear in yellow at the top right of the window to indicate
 				 status. The test results pane shows the current values for the test.</p>
             </li>
