--- a/Content/20_2000/f.Tests-SFP.htm
+++ b/Content/20_2000/f.Tests-SFP.htm
@@ -95,7 +95,7 @@
         <p>When the test sequence has been completed you can optionally save the test results by adding them to a report. To add to an existing or new report file, click on the yellow <b>Add To Report</b> button.</p>
         <p>You can now choose a name for the test results, or you can accept the default name based on the date and time of the test. Once you have finished editing the results name, click on <b>OK</b>.</p>
         <p MadCap:conditions="Default.Print">
-            <MadCap:xref href="i.Reports.htm" class="IndexPageNumber">(See also "Working with Test Reports", page 1</MadCap:xref>)</p>
+            (<MadCap:xref href="i.Reports.htm" class="IndexPageNumber">See "Working with Test Reports", page 1</MadCap:xref>)</p>
         <p MadCap:conditions="Default.Screen">(See also <MadCap:xref href="i.Reports.htm">Working with Test Reports</MadCap:xref>)</p>
     </body>
 </html>
