--- a/Content/30_3000/b2.QSG Exercise.htm
+++ b/Content/30_3000/b2.QSG Exercise.htm
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="10" MadCap:lastHeight="796" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="9" MadCap:lastHeight="796" MadCap:lastWidth="624">
     <head>
+        <link href="../Resources/Table Stylesheets/Image&amp;LabelStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
         <link href="../Resources/Table Stylesheets/InfoBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
         <link href="../Resources/Stylesheets/HelpStylesheet_AA.css" rel="stylesheet" type="text/css" />
     </head>
@@ -24,7 +25,7 @@
         </table>
         <ol>
             <li>
-                Review the Integris Safety and Compliance document included with you system for unpacking and starting the system. </li>
+                Review the Integris Safety and Compliance document included with your system for unpacking and starting the system. </li>
             <li>
                 <p>Follow the setup sequence to connect the Integris 3000 into the link to be tested.</p>
                 <p MadCap:conditions="Default.Print">
@@ -127,24 +128,24 @@
 						
 						</li>
                 </ol>
-                <table style="width: 100%;margin-left: auto;margin-right: auto; vertical-align: top;">
-                    <col style="width: 300px;" />
-                    <col />
+                <table style="width: 100%;margin-left: auto;margin-right: auto;vertical-align: top;mc-table-style: url('../Resources/Table Stylesheets/Image&amp;LabelStyle01.css');" class="TableStyle-Image_&amp;_LabelStyle01" cellspacing="0">
+                    <col style="width: 300px;" class="TableStyle-Image_&amp;_LabelStyle01-Column-Column1" />
+                    <col class="TableStyle-Image_&amp;_LabelStyle01-Column-Column1" />
                     <tbody>
-                        <tr>
-                            <td style="text-align: center;">
+                        <tr class="TableStyle-Image_&amp;_LabelStyle01-Body-Body1">
+                            <td style="text-align: center;" class="TableStyle-Image_&amp;_LabelStyle01-BodyE-Column1-Body1">
                                 <img src="../Resources/Images/3000/V4/Auto-detect-button.jpg" style="height: auto;vertical-align: top;margin-left: 0px;width: 200px;" />
                                 <img src="../Resources/Images/3000/V4/Auto-detect_Analyzing.jpg" style="height: auto;vertical-align: top;margin-left: 0px;width: 200px;" />
                             </td>
-                            <td style="text-align: center;">
+                            <td style="text-align: center;" class="TableStyle-Image_&amp;_LabelStyle01-BodyD-Column1-Body1">
                                 <img src="../Resources/Images/i3k-Auto-Detect02.jpg" style="height: auto;vertical-align: top;width: 80px;margin-left: 0px;margin-top: 25px;" />
                             </td>
                         </tr>
-                        <tr>
-                            <td>
+                        <tr class="TableStyle-Image_&amp;_LabelStyle01-Body-Body1">
+                            <td class="TableStyle-Image_&amp;_LabelStyle01-BodyB-Column1-Body1">
                                 <p class="FigNum01" MadCap:autonum=" Fig 1.3 "><i>Auto Detect</i> button</p>
                             </td>
-                            <td>
+                            <td class="TableStyle-Image_&amp;_LabelStyle01-BodyA-Column1-Body1">
                                 <p class="FigNum01" MadCap:autonum=" Fig 1.4 ">Thumbnail graphic</p>
                             </td>
                         </tr>
