--- a/Content/30_3000/c6.Waterfall Setup.htm
+++ b/Content/30_3000/c6.Waterfall Setup.htm
@@ -28,7 +28,7 @@
         </table>
         <p>To the right of the color chart is the current refresh value setting in milliseconds (ms). Click on this icon to open a dropdown list enabling you to select a new value.</p>
         <p>The refresh rate sets the period between lines being added to the top of the waterfall. Reducing the period has the effect of speeding the waterfall up and can be useful when monitoring for short period interferers. </p>
-        <p>When you hover the mouse over the waterfall the frequency offsedt at the current location is shown at the top right of the screen. This gives a quick frequency reading for the current location and is again useful for identifying short period or intermittent interferers. <MadCap:xref href="#freq" class="ListOfPageNumber">(See  Fig 1.3 )</MadCap:xref></p>
+        <p>When you hover the mouse over the waterfall the frequency offset at the current location is shown at the top right of the screen. This gives a quick frequency reading for the current location and is again useful for identifying short period or intermittent interferers. <MadCap:xref href="#freq" class="ListOfPageNumber">(See  Fig 1.3 )</MadCap:xref></p>
         <table style="margin-left: auto; margin-right: auto;">
             <col style="width: 420px;" />
             <tbody>
