--- a/Content/30_3000/c7.Multi-Screen.htm
+++ b/Content/30_3000/c7.Multi-Screen.htm
@@ -40,13 +40,13 @@
                 <td style="text-align: center;">
                     <p class="FigNum01" MadCap:autonum=" Fig 1.1 ">Multiple Graphs &amp; Control Panels              </p>
                 </td> <![CDATA[ ]]></tr>
-            <tr> </tr>
+            <tr> <![CDATA[ ]]></tr>
         </table>
         <p>To add a new graph:</p>
         <ol>
             <li>On the <i>Graph</i> menu, select <b>New</b>, or press CTRL&#160;+&#160;G.
 The <i>Create Graph</i> dialog opens <MadCap:xref href="#create" class="ListOfPageNumber">(See  Fig 1.2 )</MadCap:xref>.        
-                <table style="margin-left: auto;margin-right: auto;"><col style="width: 366px;" /><tr><td style="text-align: center;"><img src="../Resources/Images/3000/V4/V4-NewGraph.jpg" style="float: center;clear: both;height: auto;width: 150px;margin-left: 0px;margin-right: 0px;margin-top: 10px;margin-bottom: 0px;" MadCap:mediastyle="@media print { height: auto;width: 150px; }" /></td> <![CDATA[ ]]></tr><tr><td style="text-align: center;"><p class="FigNum01" MadCap:autonum=" Fig 1.2 "><a name="create"></a>The <i>Create Graph</i> dialog              </p></td> <![CDATA[ ]]></tr><tr>  <![CDATA[ ]]></tr></table></li>
+                <table style="margin-left: auto;margin-right: auto;"><col style="width: 366px;" /><tr><td style="text-align: center;"><img src="../Resources/Images/3000/V4/V4-NewGraph.jpg" style="float: center;clear: both;height: auto;width: 150px;margin-left: 0px;margin-right: 0px;margin-top: 10px;margin-bottom: 0px;" MadCap:mediastyle="@media print { height: auto;width: 150px; }" /></td> <![CDATA[ ]]></tr><tr><td style="text-align: center;"><p class="FigNum01" MadCap:autonum=" Fig 1.2 "><a name="create"></a>The <i>Create Graph</i> dialog              </p></td> <![CDATA[ ]]></tr><tr> </tr></table></li>
             <li>Click on the <b>Type</b> dropdown and select the type of graph you want to display.</li>
             <li>Click on the <b>Source</b> dropdown and select either of the two live test ports (ports 1 and 2) or a previously saved file.</li>
             <li>Click on <b>OK</b> to add a new graph or <b>Cancel</b> to go back to the previous screen configuration.</li>
@@ -100,7 +100,7 @@ The <i>Create Graph</i> dialog opens <MadCap:xref href="#create" class="ListOfPa
             <tr>
             </tr>
         </table>
-        <p>When multiple graphs are being displayed, an icon representing a sigle graph is displayed (See<MadCap:xref href="#pos2" class="Plain_FigRef01">Fig 1.4</MadCap:xref> left, and <MadCap:xref href="#sel" class="Plain_FigRef01">Fig 1.5</MadCap:xref>). </p>
+        <p>When multiple graphs are being displayed, an icon representing a single graph is displayed (See<MadCap:xref href="#pos2" class="Plain_FigRef01">Fig 1.4</MadCap:xref> left, and <MadCap:xref href="#sel" class="Plain_FigRef01">Fig 1.5</MadCap:xref>). </p>
         <p>To view any of the individual graphs, click to highlight it, then click on the control icon(or double click the desired graph). The view control icon changes to that shown in <MadCap:xref href="#sel" class="Plain_FigRef01">Fig 1.5</MadCap:xref> right.</p>
         <p>To return to multiple graph view, click on the view control icon (or double-click the onscreen graph).  The view control icon changes to that shown in <MadCap:xref href="#sel" class="Plain_FigRef01">Fig 1.5</MadCap:xref> left.</p>
         <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.3. ">Moving a Graph</h2>
@@ -116,7 +116,7 @@ The <i>Create Graph</i> dialog opens <MadCap:xref href="#create" class="ListOfPa
                 <td style="text-align: center;">
                     <p class="FigNum01" MadCap:autonum=" Fig 1.6 ">Moving a graph              </p>
                 </td> <![CDATA[ ]]></tr>
-            <tr> </tr>
+            <tr> <![CDATA[ ]]></tr>
         </table>
         <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.4. ">Closing a Graph</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Closing a Graph</h2>
@@ -132,7 +132,7 @@ The <i>Create Graph</i> dialog opens <MadCap:xref href="#create" class="ListOfPa
                 <td style="text-align: center;">
                     <p class="FigNum01" MadCap:autonum=" Fig 1.7 "><a name="del"></a>Removing a single graph              </p>
                 </td> <![CDATA[ ]]></tr>
-            <tr> </tr>
+            <tr> <![CDATA[ ]]></tr>
         </table>
         <p><b>To close all graphs,</b> open the <b>Graph</b> menu and click on <b>Close All</b>. A warning message will appear warning that the screen will now retun to the default graph (See <MadCap:xref href="#all" class="Plain_FigRef01">Fig 1.8</MadCap:xref>).</p>
         <table style="margin-left: auto;margin-right: auto;">
