--- a/Content/30_3000/c8a.Using Markers.htm
+++ b/Content/30_3000/c8a.Using Markers.htm
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="8" MadCap:lastHeight="835" MadCap:lastWidth="624">
-    <head><title>The Markers Menu</title>
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="8" MadCap:lastHeight="822" MadCap:lastWidth="624">
+    <head>
+        <link href="../Resources/Table Stylesheets/NoteBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" /><title>The Markers Menu</title>
     </head>
     <body>
         <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Using Markers</h2>
@@ -20,7 +21,18 @@
                 </tr>
             </tbody>
         </table>
-        <p>The Integris 3000 has five optional markers that can be used to track various locations on the spectrum. </p>
+        <p>The Integris 3000 has five optional markers that can be used to track frequency offsetss on the spectrum. </p>
+        <table style="width: 100%;margin-left: 0;margin-right: auto;mc-table-style: url('../Resources/Table Stylesheets/NoteBoxStyle01.css');" class="TableStyle-NoteBoxStyle01" cellspacing="0">
+            <col class="TableStyle-NoteBoxStyle01-Column-Column1" />
+            <tbody>
+                <tr class="TableStyle-NoteBoxStyle01-Body-Body1">
+                    <td class="TableStyle-NoteBoxStyle01-BodyA-Column1-Body1">
+                        <p><b>Note:</b>
+			 Markers can only be used with Power Spectrum graphs, and when a single graph is active on the system.</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
         <h3>To set a marker using the Modern Menu system:</h3>
         <ol>
             <li>Open the Markers menu. </li>
