--- a/Content/01_Introduction Topics/a1.UG_Legal.htm
+++ b/Content/01_Introduction Topics/a1.UG_Legal.htm
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="8" MadCap:lastHeight="841" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="8" MadCap:lastHeight="832" MadCap:lastWidth="624">
     <head>
     </head>
     <body>
@@ -24,16 +24,14 @@
                         </p>
                     </td>
                     <td>
-                        <p style="text-align: center;">;<MadCap:variable name="AA_Integris-2k3k_Vars.DCN-UG-ChangeDate" /></p>
+                        <p style="text-align: center;"><MadCap:variable name="AA_Integris-2k3k_Vars.DCN-UG-ChangeDate" />
+                        </p>
                     </td>
                     <td style="vertical-align: top;font-size: 11pt;">
                         <p>Addition of the following features:</p>
                         <p>Integris 3000:</p>
                         <ul>
-                            <li>Multi-graph</li>
-                            <li>Save / Load display configuration</li>
-                            <li>Fast / Variable waterfall data</li>
-                            <li>Automatic configuration selection</li>
+                            <li>Markers snap to location</li>
                         </ul>
                     </td>
                 </tr>
