--- a/Content/01_Introduction Topics/d.Document_Conventions.htm
+++ b/Content/01_Introduction Topics/d.Document_Conventions.htm
@@ -7,7 +7,7 @@
         <link href="../Resources/Table Stylesheets/ShadedRowStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Document Conventions</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Document Conventions</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Document Conventions</h2>
         <p>Binary numbers are prefixed with a “0b”; for example, “0b0100”.</p>
         <p>Hexadecimal numbers are prefixed with an “0x”; for example, “0x05FF”</p>
