--- a/Content/02_Safety & Compliance/c.Safety-Compliance.htm
+++ b/Content/02_Safety & Compliance/c.Safety-Compliance.htm
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="5" MadCap:lastHeight="821" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="5" MadCap:lastHeight="830" MadCap:lastWidth="624">
     <head>
         <link href="../Resources/Table Stylesheets/NoteBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Safety &amp; Compliance</h2>
+        <h1 class="AA_Chpt_Heading1" MadCap:conditions="Default.Print" MadCap:autonum="1. ">Safety &amp; Compliance</h1>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Safety &amp; Compliance</h2>
         <p>To ensure correct and safe operation, you must follow all safety precautions and instructions referred to in this user guide and in the other documentation supplied with your Integris System.</p>
         <ul>
@@ -24,7 +24,7 @@
             <li>Do Not Operate with Suspected Failures. If you suspect  there is damage to this product, have it inspected by qualified service personnel before use.</li>
             <li>Obey Safety Information. </li>
         </ul>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.2. ">General Operating Guidelines</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">General Operating Guidelines</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">General Operating Guidelines</h2>
         <ul>
             <li>Do not expose your skin to the computer when operating it in a very hot or cold environment.</li>
