--- a/Content/20_2000/b.Connecting_2k.htm
+++ b/Content/20_2000/b.Connecting_2k.htm
@@ -38,7 +38,7 @@
             <tbody>
                 <tr>
                     <td style="text-align: center;">
-                        <img src="../Resources/Images/TB_RL to RRH-01.jpg" MadCap:mediastyle="@media print { height: auto;width: 350px; }" style="margin-top: 10px;margin-bottom: 10px;height: auto;width: 350px;" />
+                        <img src="../Resources/Images/2k_RRH_Monitoring-01.jpg" MadCap:mediastyle="@media print { height: auto;width: 350px; }" style="margin-top: 10px;margin-bottom: 10px;height: auto;width: 350px;" />
                     </td>
                 </tr>
                 <tr>
@@ -88,7 +88,7 @@
             <tbody>
                 <tr class="TableStyle-Image_&amp;_LabelStyle01-Body-Body1">
                     <td style="text-align: center;" class="TableStyle-Image_&amp;_LabelStyle01-BodyD-Column1-Body1">
-                        <img src="../Resources/Images/TB-loopback-2a.jpg" MadCap:mediastyle="@media print { height: auto;width: 400px; }" style="clear: both;vertical-align: text-top;mc-float: center;height: auto;width: 400px;" />
+                        <img src="../Resources/Images/Laptop loopback setup.jpg" MadCap:mediastyle="@media print { height: auto;width: 400px; }" style="clear: both;vertical-align: text-top;mc-float: center;height: auto;width: 400px;" />
                     </td>
                 </tr>
                 <tr class="TableStyle-Image_&amp;_LabelStyle01-Body-Body1">
