--- a/Content/30_3000/b1.Integris_3000_Display.htm
+++ b/Content/30_3000/b1.Integris_3000_Display.htm
@@ -37,19 +37,18 @@
             </li>
             <li><b>Record Trace &amp;&#160;Snapshot:</b> Record a trace file to be replayed later,
 				 or take and display screen shots.
-<p MadCap:conditions="Default.Print"><MadCap:conditionalText>(See: <MadCap:xref href="c11a.Snapshot.htm" class="XREF_Range">Taking a Screen Snapshot on page 1) </MadCap:xref></MadCap:conditionalText></p><p MadCap:conditions="Default.Screen"><MadCap:xref href="c11a.Snapshot.htm" class="XREF_Range">  <![CDATA[ ]]></MadCap:xref><MadCap:conditionalText><MadCap:xref href="c11a.Snapshot.htm" class="XREF_Range">(See: <MadCap:xref href="c11a.Snapshot.htm">Taking a Screen Snapshot
-				</MadCap:xref></MadCap:xref></MadCap:conditionalText>)
-           </p></li>
+				
+<p MadCap:conditions="Default.Print">
+					(See: <MadCap:xref href="c11a.Snapshot.htm" class="XREF_Range">"Taking a Screen Snapshot" on page 1</MadCap:xref>)</p><p MadCap:conditions="Default.Screen">(See: <MadCap:xref href="c11a.Snapshot.htm">Taking a Screen Snapshot
+				</MadCap:xref></p></li>
             <li>
                 <p><b>Menu Selector:</b> Displayed when you select <b>Classic View</b> in <b>System &gt; Preferences</b>, This selector is
 				 located at the bottom of the screen and allows the different <i>Classic</i> menus to be displayed to the right of the screen. </p>
                 <p MadCap:conditions="Default.Print">
-                    <MadCap:conditionalText>(See: <MadCap:xref href="b3.Menus&amp;Menu_Selector.htm" class="XREF_Range">Integris 3000 Menus on page 1
-				</MadCap:xref>)</MadCap:conditionalText>
+                    <MadCap:conditionalText>(See: <MadCap:xref href="b3.Menus&amp;Menu_Selector.htm" class="XREF_Range">Integris 3000 Menus on page 1</MadCap:xref>)</MadCap:conditionalText>
                 </p>
                 <p MadCap:conditions="Default.Screen">
-                    <MadCap:conditionalText>(See: <MadCap:xref href="b3.Menus&amp;Menu_Selector.htm">Switching Between  Menu Types
-				</MadCap:xref>)</MadCap:conditionalText>
+                    <MadCap:conditionalText>(See: <MadCap:xref href="b3.Menus&amp;Menu_Selector.htm">Switching Between Menu Types</MadCap:xref>)</MadCap:conditionalText>
                 </p>
             </li>
             <li MadCap:conditions=""><b>Power Spectrum:</b> A traditional “Bart’s Head” displaying amplitude against frequency.
@@ -59,9 +58,9 @@
 					</li>
             <p MadCap:conditions="Default.Print">
                 (See: <MadCap:xref href="c4.Spectrum Setup.htm" class="XREF_Range">"Setting up the Power
-				 Spectrum Graph" on page 1</MadCap:xref></p>
+				 Spectrum Graph" on page 1</MadCap:xref>)</p>
             <p MadCap:conditions="Default.Screen">
-                See: <MadCap:xref href="c4.Spectrum Setup.htm">Setting up the Power Spectrum Graph</MadCap:xref></p>
+                (See: <MadCap:xref href="c4.Spectrum Setup.htm">Setting up the Power Spectrum Graph</MadCap:xref>)</p>
             <li style="page-break-after: auto;">
                 <p><b>Menus</b>: The screenshot shows <i>Classic Menus</i>. Alternatively
 			 you can use standard Windows style <i>Modern Menus</i>. You can swap between the two menu types using
